syntax = "proto3";
package pt.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message PropagateStateRequest {
  Operation op = 1;
}

message PropagateStateResponse {}

message RegistrationRequest {
  string serviceName = 1;
  string serverQualifier = 2;
  string serverAddress = 3;
}

message RegistrationResponse {}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc register(RegistrationRequest) returns (RegistrationResponse);
}
